--- a/index.html
+++ b/index.html
@@ -96,10 +96,7 @@
                             <h2>Welcome to CDIT !</h2> 
                              <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                             quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                             consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                             cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                             proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                             quis nostrud exercitation ullamco.</p>
                              <a class="btn-default text-capitalize exp-info" href="about.html" role="button">More About Us</a>
                               <a class="btn-default text-capitalize exp-info1" href="courses.html" role="button">View Courses</a>
                         </div>
@@ -116,9 +113,7 @@
                              <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
                              quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                             consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                             cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                             proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                             consequat. Duis aute irure dolor</p>
                              <a class="btn-default text-capitalize exp-info" href="about.html" role="button">More About Us</a>
                               <a class="btn-default text-capitalize exp-info1" href="courses.html" role="button">View Courses</a>
                         </div>
