--- a/index.html
+++ b/index.html
@@ -127,9 +127,9 @@
 				<i class="fas fa-laptop-code"></i>
 				</div>
 				<div class="service-content">
-				<h2>Computer Courses</h2>
-				<p>Sun - Thu : 10:00AM - 06:00PM</p>
-				</div>
+				<h2>WEB  DEVELOPMENT</h2>
+				<p>E-commerce , Blogging , Softwares</p>
+				</div> 
 				</div>
 			</div>
 			<div class="col-lg-4 col-sm-6">
@@ -138,8 +138,8 @@
 				<i class="fas fa-book"></i>
 				</div>
 				<div class="service-content">
-				<h2>Short Term Courses</h2>
-				<p>Sun - Thu : 10:00AM - 06:00PM</p>
+				<h2>Technical  Courses</h2>
+				<p>C , C++ , JAVA , TALLY and lots more.</p>
 				</div>
 				</div>
 			</div>
@@ -149,8 +149,8 @@
 				<i class="fas fa-cloud"></i>
 				</div>
 				<div class="service-content">
-				<h2>Career Courses</h2>
-				<p>Sun - Thu : 10:00AM - 06:00PM</p>
+				<h2>Cloud  Solutions</h2>
+				<p>Domain , Hosting , Maintenance</p>
 				</div>
 				</div>
 			</div>
@@ -164,9 +164,9 @@
 <section class="full-width home-ragular-course pb-100">
 	<div class="container">
 		<div class="full-width section-tittle text-center">
-		<h2>Our Regular Courses</h2>
+		<h2>Our Services</h2>
 		<p class="full-width">
-		A college course is a class offered by a college or university. These courses are usually part of a program leading.
+		A complete package where you can get all your technical requirements.Connect with us Now.
 		</p>
 		</div>
 		<div class="row">
@@ -178,7 +178,7 @@
 			</div>
 			<div class="course-content">
 			<p>
-			A classroom is a learning space, a room in which both children and adults learn.Parts of education.
+			Online business ? Get the easiet and fastest work culture here with us. Connect with us Now.
 			</p>
 			<button class="border-btn" data-bs-toggle="modal" data-bs-target="#exampleModal1">Read More</button>
 			
@@ -190,11 +190,11 @@
 			<div class="single-ragular-course">
 			<div class="course-img">
 			<img src="images/ban4.jpg" alt="ragular">
-			<h2>Android App Development</h2>
+			<h2>Training Programs</h2>
 			</div>
 			<div class="course-content">
 			<p>
-			A classroom is a learning space, a room in which both children and adults learn.Parts of education.
+		      Our professional are highly trained and look up after every concpet for you in c , c++ , java , MS Office etc.
 			</p>
 			
 			<button class="border-btn" data-bs-toggle="modal" data-bs-target="#exampleModal2">Read More</button>
@@ -209,7 +209,7 @@
 			</div>
 			<div class="course-content">
 			<p>
-			A classroom is a learning space, a room in which both children and adults learn.Parts of education.
+			Want to start your own business online, don't worry we offer every solutions for you. Get in touch today.
 			</p>
 			<button class="border-btn" data-bs-toggle="modal" data-bs-target="#exampleModal3">Read More</button>
 			
@@ -224,7 +224,7 @@
 			</div>
 			<div class="course-content">
 			<p>
-			A classroom is a learning space, a room in which both children and adults learn.Parts of education.
+			Want to get connected with your customer , want to get sms services for your business, Come to us.
 			</p>
 			<button class="border-btn" data-bs-toggle="modal" data-bs-target="#exampleModal4">Read More</button>
 			
@@ -248,33 +248,33 @@
 			<div class="col-lg-6 home-choose">
 				<div class="home-choose-content">
 				<div class="section-tittle">
-				<h2>Why Choose Edvi?</h2>
+				<h2>Why Choose CDIT?</h2>
 				<p>
-				School choice theory assumes that parents are rational actors that can gather and consume information to find a school that matches their child's needs. Parents' desires and ability to choose quality schools.
+				CDIT Infotech PVT. LTD. have the global presence in India as well as Canada with a team of 50+ in-house talents. Our commitment and belief to achieve the best is making us the most demandable company globally. We believe in stepping into client’s shoe for building their product in more awesome ways.
 				</p>
 				</div>
 				<div class="row">
 					<div class="col-lg-4 col-sm-12 col-md-5">
 						<ul class="choose-list-left">
-						<li><i class="fas fa-check-circle"></i>Top 10 Rated School</li>
-						<li><i class="fas fa-check-circle"></i>Great Behaviour</li>
-						<li><i class="fas fa-check-circle"></i>Helpful &amp; Kindnesss</li>
-						<li><i class="fas fa-check-circle"></i>Learning With Fun</li>
-						<li><i class="fas fa-check-circle"></i>Children Safety</li>
+						<li><i class="fas fa-check-circle"></i>Website Development</li>
+						<li><i class="fas fa-check-circle"></i>App. Development</li>
+						<li><i class="fas fa-check-circle"></i>Bulk SMS</li>
+						<li><i class="fas fa-check-circle"></i>Domain/Web Space/Email</li>
+						<li><i class="fas fa-check-circle"></i>E-Commerce Development</li>
 						</ul>
 					</div>
 					<div class="col-lg-8 col-sm-12 col-md-7">
 						<div class="choose-list-home">
 						<ul>
 						<li><i class="fas fa-check-circle"></i>Eco Freindly Environment</li>
-						<li><i class="fas fa-check-circle"></i>Healthy Food &amp; Water in Canteen</li>
-						<li><i class="fas fa-check-circle"></i>Health Care With Certified Dorctors</li>
-						<li><i class="fas fa-check-circle"></i>Huge Playground With Children Park</li>
-						<li><i class="fas fa-check-circle"></i>Physically Fit Buses With Experienced Driver</li>
+						<li><i class="fas fa-check-circle"></i>Training Programs</li>
+						<li><i class="fas fa-check-circle"></i>Certified Coding Sessions </li>
+						<li><i class="fas fa-check-circle"></i>Tally , DCA and Lots More</li>
+						<li><i class="fas fa-check-circle"></i>Ms Office , Excel and Lots More</li>
 						</ul>
 						</div>
 					</div>
-					<a href="" class="box-btn">Know More</a>
+					<a href="about.html" class="box-btn">Know More</a>
 				</div>
 				</div>
 			</div>
@@ -311,7 +311,7 @@
 
 						<div class="col-lg-8 col-md-7">
 							<div class="admission-content">
-							<h2>Spring Term 2021 Admission for All Standard</h2>
+							<h2>Our </h2>
 							<p>Admission will Close 30th March 2021. Time Remaining:</p>
 							<ul class="admission-list">
 							<li>
@@ -351,7 +351,9 @@
 				<p>A college course is a class offered by a college or university. These courses are usually part of a program leading.</p>
 			</div>
 		</div>
+		
 	</div>
+
 	<div class="container-fluid">
 		<div class="owl-carousel owl-theme course-all">
 		    <div class="item">
